fix: correct package imports for pip/uvx installation
The package used `src.signoz_mcp_server` prefix in imports which only works
when running from the repo root. When installed via pip/uvx, the `src/`
directory is stripped and the package is installed as `signoz_mcp_server`.

Changes:
- Fix entry point in pyproject.toml to use `signoz_mcp_server.mcp_server:main`
- Replace try/except import fallbacks with proper absolute imports
- Update all test files to use correct import paths

This fix allows the package to be installed and run via:
  uvx --from git+https://github.com/AltimateAI/drdroid-signoz-mcp-server signoz-mcp-server

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
 ]
 
 [project.scripts]
-signoz-mcp-server = "src.signoz_mcp_server.mcp_server:main"
+signoz-mcp-server = "signoz_mcp_server.mcp_server:main"
 
 [project.optional-dependencies]
 prod = [
